# eecs560_lab12

./: .gitignore  LICENSE  Makefile  README.md  input.txt  input2.txt  main.cpp
Verification/: CMakeLists.txt  main.cpp
Verification/output/: out1a.dot  out1b.dot  out2a.dot  out2b.dot
